gets all datasets

--- a/7_getting_metrics_for_the_first_model.ipynb
+++ b/7_getting_metrics_for_the_first_model.ipynb
@@ -14,7 +14,9 @@
     "* `emotions`\n",
     "* `scene`\n",
     "\n",
-    "The **baseline** will be the regular Binary Relevance. Then we will compare those to the Basic Stacking approach. Finally, we will run the Stacking With F-Test, with `alpha=0.5`. All other parameters, of the other models, will be the default ones, using the `SVC` as the base classifier."
+    "The **baseline** will be the regular Binary Relevance. Then we will compare those to the Basic Stacking approach. Finally, we will run the Stacking With F-Test, with `alpha=0.5`. All other parameters, of the other models, will be the default ones, using the `SVC` as the base classifier.\n",
+    "\n",
+    "The metrics we will use, as per what was defined in my report, are the hamming loss and the f1 score. We will use the `EvaluationPipeline` class to run the experiments."
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,275 @@
     "import sklearn.metrics as metrics\n",
     "import json\n",
     "import pandas as pd\n",
-    "from sklearn.feature_selection import f_classif\n"
+    "from sklearn.feature_selection import f_classif\n",
+    "from evaluation import EvaluationPipeline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: move this to an actual python file\n",
+    "\n",
+    "class BasicStacking(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: BinaryRelevance\n",
+    "\n",
+    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "        super(BasicStacking, self).__init__(classifier, require_dense)\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "        self.second_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "\n",
+    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "    \n",
+    "    def predict(self, X: Any):\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        return self.second_layer_classifiers.predict(X_expanded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO move this to an actual python file\n",
+    "\n",
+    "class StackingWithFTests(ProblemTransformationBase):\n",
+    "    alpha: float\n",
+    "    use_first_layer_to_calculate_correlations: bool\n",
+    "    \n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: List[Any] # TODO should be any generic type of classifier\n",
+    "    labels_count: int\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        alpha: float = 0.5,\n",
+    "        use_first_layer_to_calculate_correlations: bool = False,\n",
+    "        classifier: Any = None,\n",
+    "        require_dense: Optional[List[bool]] = None\n",
+    "    ):\n",
+    "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
+    "\n",
+    "        if alpha < 0.0 or alpha > 1.0:\n",
+    "            raise Exception(\"alpha must be >= 0.0 and <= 1.0\")\n",
+    "\n",
+    "        self.alpha = alpha\n",
+    "        self.use_first_layer_to_calculate_correlations = use_first_layer_to_calculate_correlations\n",
+    "        \n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "        # TODO: allow for any base model (base classifier) to be used\n",
+    "        # right now I am forcing the use of SVC\n",
+    "\n",
+    "        self.second_layer_classifiers = []\n",
+    "        self.correlated_labels_map = pd.DataFrame()\n",
+    "        self.labels_count = 0\n",
+    "\n",
+    "\n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.labels_count = y.shape[1]\n",
+    "\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "        \n",
+    "        label_classifications = y\n",
+    "        if self.use_first_layer_to_calculate_correlations:\n",
+    "            label_classifications = self.first_layer_classifiers.predict(X)\n",
+    "\n",
+    "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(label_classifications)\n",
+    "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs)\n",
+    "\n",
+    "        for i in range(self.labels_count):\n",
+    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
+    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
+    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "            additional_input = label_classifications.todense()[:, labels_to_expand]\n",
+    "            \n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
+    "\n",
+    "            y_label_specific = y.todense()[:, i]\n",
+    "            y_label_specific = self.convert_matrix_to_vector(y_label_specific)\n",
+    "\n",
+    "            meta_classifier = SVC()\n",
+    "            meta_classifier.fit(X_expanded, y_label_specific)\n",
+    "\n",
+    "            self.second_layer_classifiers.append(meta_classifier)\n",
+    "            print(f\"finished training meta classifier for label {i}\")\n",
+    "    \n",
+    "    def calculate_f_test_for_all_label_pairs(self, label_classifications: Any) -> List[Dict[str, Any]]:\n",
+    "        results = []\n",
+    "\n",
+    "        for i in range(0, self.labels_count):\n",
+    "            for j in range(0, self.labels_count):\n",
+    "                if i == j:\n",
+    "                    continue\n",
+    "\n",
+    "                X = label_classifications.todense()[:, i]\n",
+    "                base_label = self.convert_matrix_to_array(X)\n",
+    "\n",
+    "                y = label_classifications.todense()[:, j]\n",
+    "                against_label = self.convert_matrix_to_vector(y)\n",
+    "\n",
+    "                f_test_result = f_classif(base_label, against_label)[0]\n",
+    "\n",
+    "                results.append({\n",
+    "                    \"label_being_tested\": i,\n",
+    "                    \"against_label\": j,\n",
+    "                    \"f_test_result\": float(f_test_result)\n",
+    "                })\n",
+    "        \n",
+    "        return results\n",
+    "    \n",
+    "    def convert_matrix_to_array(self, matrix: Any):\n",
+    "        return np.asarray(matrix).reshape(-1, 1)\n",
+    "\n",
+    "    def convert_matrix_to_vector(self, matrix: Any):\n",
+    "        return np.asarray(matrix).reshape(-1)\n",
+    "    \n",
+    "    def get_map_of_correlated_labels(self, f_test_results: List[Dict[str, Any]]) -> pd.DataFrame:\n",
+    "        temp_df = pd.DataFrame(f_test_results)\n",
+    "        \n",
+    "        sorted_temp_df = temp_df.sort_values(\n",
+    "            by=[\"label_being_tested\", \"f_test_result\"],\n",
+    "            ascending=[True, False])\n",
+    "        # ordering in descending order by the F-test result,\n",
+    "        # following what the main article describes\n",
+    "\n",
+    "        selected_features = []\n",
+    "\n",
+    "        for i in range(0, self.labels_count):\n",
+    "            mask = sorted_temp_df[\"label_being_tested\"] == i\n",
+    "            split_df = sorted_temp_df[mask].reset_index(drop=True)\n",
+    "\n",
+    "            big_f = split_df[\"f_test_result\"].sum()\n",
+    "            max_cum_f = self.alpha * big_f\n",
+    "\n",
+    "            cum_f = 0\n",
+    "            for _, row in split_df.iterrows():\n",
+    "                cum_f += row[\"f_test_result\"]\n",
+    "                if cum_f > max_cum_f:\n",
+    "                    break\n",
+    "\n",
+    "                selected_features.append({\n",
+    "                    \"for_label\": i,\n",
+    "                    \"expand_this_label\": int(row[\"against_label\"]),\n",
+    "                    \"f_test_result\": float(row[\"f_test_result\"]),\n",
+    "                })\n",
+    "        \n",
+    "        cols = [\"for_label\", \"expand_this_label\", \"f_test_result\"]\n",
+    "        return pd.DataFrame(selected_features, columns=cols)\n",
+    "    \n",
+    "    def predict(self, X: Any) -> np.ndarray[Any,Any]:\n",
+    "        if self.correlated_labels_map.columns.size == 0:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
+    "        predictions = self.first_layer_classifiers.predict(X)\n",
+    "        local_labels_count = predictions.shape[1]\n",
+    "\n",
+    "        second_layer_predictions = []\n",
+    "\n",
+    "        for i in range(local_labels_count):\n",
+    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
+    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
+    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
+    "\n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
+    "\n",
+    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
+    "            second_layer_predictions.append(temp_preds)\n",
+    "\n",
+    "        reshaped_array = np.asarray(second_layer_predictions).T\n",
+    "        return reshaped_array\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting dataset `scene`\n",
+      "scene:undivided - exists, not redownloading\n",
+      "getting dataset `emotions`\n",
+      "emotions:undivided - exists, not redownloading\n",
+      "getting dataset `birds`\n",
+      "birds:undivided - exists, not redownloading\n",
+      "===\n",
+      "information for dataset `scene`\n",
+      "rows: 2407, labels: 6\n",
+      "===\n",
+      "information for dataset `emotions`\n",
+      "rows: 593, labels: 6\n",
+      "===\n",
+      "information for dataset `birds`\n",
+      "rows: 645, labels: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "desired_datasets = [\"scene\", \"emotions\", \"birds\"]\n",
+    "\n",
+    "datasets = {}\n",
+    "for dataset_name in desired_datasets:\n",
+    "    print(f\"getting dataset `{dataset_name}`\")\n",
+    "    \n",
+    "    full_dataset = load_dataset(dataset_name, \"undivided\")\n",
+    "    X, y, _, _ = full_dataset\n",
+    "\n",
+    "    datasets[dataset_name] = {\n",
+    "        \"X\": X,\n",
+    "        \"y\": y,\n",
+    "        \"rows\": X.shape[0],\n",
+    "        \"labels_count\": y.shape[1]\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "for name, info in datasets.items():\n",
+    "    print(\"===\")\n",
+    "    print(f\"information for dataset `{name}`\")\n",
+    "    print(f\"rows: {info['rows']}, labels: {info['labels_count']}\")\n"
    ]
   },
   {
@@ -55,7 +325,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   }
  },
