gets the testing pipeline running

--- a/7_getting_metrics_for_the_first_model.ipynb
+++ b/7_getting_metrics_for_the_first_model.ipynb
@@ -315,7 +315,111 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Evaluations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_binary_relevance_model = BinaryRelevance(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "basic_stacking_model = BasicStacking()\n",
+    "stacking_with_f_tests_model = StackingWithFTests(alpha=0.5)\n",
+    "\n",
+    "models = {\n",
+    "    \"baseline_binary_relevance_model\": baseline_binary_relevance_model,\n",
+    "    \"basic_stacking_model\": basic_stacking_model,\n",
+    "    \"stacking_with_f_tests_model\": stacking_with_f_tests_model\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_results = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# running model `baseline_binary_relevance_model`\n",
+      "## running dataset `scene`\n",
+      "results obtained:\n",
+      "Accuracy: 0.5268 ± 0.13\n",
+      "Hamming Loss: -0.1020 ± 0.03\n",
+      "## running dataset `emotions`\n",
+      "results obtained:\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "## running dataset `birds`\n",
+      "results obtained:\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "# running model `basic_stacking_model`\n",
+      "## running dataset `scene`\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model_name, model in models.items():\n",
+    "    print(f\"# running model `{model_name}`\")\n",
+    "\n",
+    "    evaluation_results[model_name] = {}\n",
+    "\n",
+    "    n_folds = 5\n",
+    "    evaluation_pipeline = EvaluationPipeline(model, n_folds)\n",
+    "\n",
+    "    for dataset_name, info in datasets.items():\n",
+    "        print(f\"## running dataset `{dataset_name}`\")\n",
+    "\n",
+    "        result = evaluation_pipeline.run(info[\"X\"], info[\"y\"])\n",
+    "        evaluation_results[model_name][dataset_name] = result\n",
+    "\n",
+    "        print(f\"results obtained:\")\n",
+    "        result.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([2.0240283 , 1.66600084]),\n",
+       " 'score_time': array([1.19197035, 1.17500257]),\n",
+       " 'test_accuracy': array([0.60880399, 0.58686617]),\n",
+       " 'train_accuracy': array([0.719867  , 0.71345515]),\n",
+       " 'test_hamming_loss': array([-0.08388704, -0.08464949]),\n",
+       " 'train_hamming_loss': array([-0.05444722, -0.05647841])}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluation_results[\"baseline_binary_relevance_model\"][\"scene\"].raw()"
+   ]
   }
  ],
  "metadata": {
