runs again, but with f1 score now

--- a/7_getting_metrics_for_the_first_model.ipynb
+++ b/7_getting_metrics_for_the_first_model.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,16 +364,264 @@
       "results obtained:\n",
       "Accuracy: 0.5268 ± 0.13\n",
       "Hamming Loss: -0.1020 ± 0.03\n",
+      "F1 score: 0.4207 ± 0.09\n",
       "## running dataset `emotions`\n",
       "results obtained:\n",
       "Accuracy: 0.0135 ± 0.01\n",
       "Hamming Loss: -0.3033 ± 0.02\n",
-      "## running dataset `birds`\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "## running dataset `birds`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "results obtained:\n",
       "Accuracy: 0.4636 ± 0.05\n",
       "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n",
       "# running model `basic_stacking_model`\n",
-      "## running dataset `scene`\n"
+      "## running dataset `scene`\n",
+      "results obtained:\n",
+      "Accuracy: 0.5268 ± 0.13\n",
+      "Hamming Loss: -0.1020 ± 0.03\n",
+      "F1 score: 0.4207 ± 0.09\n",
+      "## running dataset `emotions`\n",
+      "results obtained:\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "## running dataset `birds`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results obtained:\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n",
+      "# running model `stacking_with_f_tests_model`\n",
+      "## running dataset `scene`\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "results obtained:\n",
+      "Accuracy: 0.5746 ± 0.11\n",
+      "Hamming Loss: -0.1005 ± 0.02\n",
+      "F1 score: 0.4513 ± 0.09\n",
+      "## running dataset `emotions`\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "results obtained:\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "## running dataset `birds`\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 6\n",
+      "finished training meta classifier for label 7\n",
+      "finished training meta classifier for label 8\n",
+      "finished training meta classifier for label 9\n",
+      "finished training meta classifier for label 10\n",
+      "finished training meta classifier for label 11\n",
+      "finished training meta classifier for label 12\n",
+      "finished training meta classifier for label 13\n",
+      "finished training meta classifier for label 14\n",
+      "finished training meta classifier for label 15\n",
+      "finished training meta classifier for label 16\n",
+      "finished training meta classifier for label 17\n",
+      "finished training meta classifier for label 18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 6\n",
+      "finished training meta classifier for label 7\n",
+      "finished training meta classifier for label 8\n",
+      "finished training meta classifier for label 9\n",
+      "finished training meta classifier for label 10\n",
+      "finished training meta classifier for label 11\n",
+      "finished training meta classifier for label 12\n",
+      "finished training meta classifier for label 13\n",
+      "finished training meta classifier for label 14\n",
+      "finished training meta classifier for label 15\n",
+      "finished training meta classifier for label 16\n",
+      "finished training meta classifier for label 17\n",
+      "finished training meta classifier for label 18\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 6\n",
+      "finished training meta classifier for label 7\n",
+      "finished training meta classifier for label 8\n",
+      "finished training meta classifier for label 9\n",
+      "finished training meta classifier for label 10\n",
+      "finished training meta classifier for label 11\n",
+      "finished training meta classifier for label 12\n",
+      "finished training meta classifier for label 13\n",
+      "finished training meta classifier for label 14\n",
+      "finished training meta classifier for label 15\n",
+      "finished training meta classifier for label 16\n",
+      "finished training meta classifier for label 17\n",
+      "finished training meta classifier for label 18\n",
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 6\n",
+      "finished training meta classifier for label 7\n",
+      "finished training meta classifier for label 8\n",
+      "finished training meta classifier for label 9\n",
+      "finished training meta classifier for label 10\n",
+      "finished training meta classifier for label 11\n",
+      "finished training meta classifier for label 12\n",
+      "finished training meta classifier for label 13\n",
+      "finished training meta classifier for label 14\n",
+      "finished training meta classifier for label 15\n",
+      "finished training meta classifier for label 16\n",
+      "finished training meta classifier for label 17\n",
+      "finished training meta classifier for label 18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "finished training meta classifier for label 6\n",
+      "finished training meta classifier for label 7\n",
+      "finished training meta classifier for label 8\n",
+      "finished training meta classifier for label 9\n",
+      "finished training meta classifier for label 10\n",
+      "finished training meta classifier for label 11\n",
+      "finished training meta classifier for label 12\n",
+      "finished training meta classifier for label 13\n",
+      "finished training meta classifier for label 14\n",
+      "finished training meta classifier for label 15\n",
+      "finished training meta classifier for label 16\n",
+      "finished training meta classifier for label 17\n",
+      "finished training meta classifier for label 18\n",
+      "results obtained:\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n"
      ]
     }
    ],
@@ -398,27 +646,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([2.0240283 , 1.66600084]),\n",
-       " 'score_time': array([1.19197035, 1.17500257]),\n",
-       " 'test_accuracy': array([0.60880399, 0.58686617]),\n",
-       " 'train_accuracy': array([0.719867  , 0.71345515]),\n",
-       " 'test_hamming_loss': array([-0.08388704, -0.08464949]),\n",
-       " 'train_hamming_loss': array([-0.05444722, -0.05647841])}"
+       "{'baseline_binary_relevance_model': {'scene': <evaluation.EvaluationPipelineResult at 0x235993ea1f0>,\n",
+       "  'emotions': <evaluation.EvaluationPipelineResult at 0x235998231f0>,\n",
+       "  'birds': <evaluation.EvaluationPipelineResult at 0x2358a459fa0>},\n",
+       " 'basic_stacking_model': {'scene': <evaluation.EvaluationPipelineResult at 0x2359b062f70>,\n",
+       "  'emotions': <evaluation.EvaluationPipelineResult at 0x2359b06ec10>,\n",
+       "  'birds': <evaluation.EvaluationPipelineResult at 0x2359b05f160>},\n",
+       " 'stacking_with_f_tests_model': {'scene': <evaluation.EvaluationPipelineResult at 0x2358a25e100>,\n",
+       "  'emotions': <evaluation.EvaluationPipelineResult at 0x2359b057df0>,\n",
+       "  'birds': <evaluation.EvaluationPipelineResult at 0x2359b130130>}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluation_results[\"baseline_binary_relevance_model\"][\"scene\"].raw()"
+    "evaluation_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation_results[\"baseline_binary_relevance_model\"][\"emotions\"].describe()"
    ]
   }
  ],
