gets baseline results

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -105,10 +105,16 @@
      "text": [
       "getting dataset `scene`\n",
       "scene:undivided - exists, not redownloading\n",
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n",
       "getting dataset `emotions`\n",
       "emotions:undivided - exists, not redownloading\n",
+      "emotions:train - exists, not redownloading\n",
+      "emotions:test - exists, not redownloading\n",
       "getting dataset `birds`\n",
       "birds:undivided - exists, not redownloading\n",
+      "birds:train - exists, not redownloading\n",
+      "birds:test - exists, not redownloading\n",
       "===\n",
       "information for dataset `scene`\n",
       "rows: 2407, labels: 6\n",
@@ -216,7 +222,37 @@
       "Hamming Loss: -0.0534 ± 0.00\n",
       "F1 score: 0.0128 ± 0.00\n",
       "# running model `basic_stacking_model`\n",
-      "## running dataset `scene`\n"
+      "## running dataset `scene`\n",
+      "results obtained:\n",
+      "Accuracy: 0.5268 ± 0.13\n",
+      "Hamming Loss: -0.1020 ± 0.03\n",
+      "F1 score: 0.4207 ± 0.09\n",
+      "## running dataset `emotions`\n",
+      "results obtained:\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "## running dataset `birds`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
+      "c:\\Users\\Edgard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1570: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results obtained:\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n"
      ]
     }
    ],
@@ -239,6 +275,63 @@
     "\n",
     "        print(f\"results obtained:\")\n",
     "        result.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model `baseline_binary_relevance_model`, dataset `scene`\n",
+      "Accuracy: 0.5268 ± 0.13\n",
+      "Hamming Loss: -0.1020 ± 0.03\n",
+      "F1 score: 0.4207 ± 0.09\n",
+      "\n",
+      "model `baseline_binary_relevance_model`, dataset `emotions`\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "\n",
+      "model `baseline_binary_relevance_model`, dataset `birds`\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n",
+      "\n",
+      "model `basic_stacking_model`, dataset `scene`\n",
+      "Accuracy: 0.5268 ± 0.13\n",
+      "Hamming Loss: -0.1020 ± 0.03\n",
+      "F1 score: 0.4207 ± 0.09\n",
+      "\n",
+      "model `basic_stacking_model`, dataset `emotions`\n",
+      "Accuracy: 0.0135 ± 0.01\n",
+      "Hamming Loss: -0.3033 ± 0.02\n",
+      "F1 score: 0.0576 ± 0.01\n",
+      "\n",
+      "model `basic_stacking_model`, dataset `birds`\n",
+      "Accuracy: 0.4636 ± 0.05\n",
+      "Hamming Loss: -0.0534 ± 0.00\n",
+      "F1 score: 0.0128 ± 0.00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model, data in evaluation_results.items():\n",
+    "    for dataset, result in data.items():\n",
+    "        print(f\"model `{model}`, dataset `{dataset}`\")\n",
+    "        result.describe()\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, results are truly identical among the two models."
    ]
   },
   {
